<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">BytePad</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="paper_img">Paper Image either pdf or doc</string>
    <string name="si_img">The logo of Software Incubator</string>
    <string name="cross_img_desc">Click to clear field</string>
    <string name="search_hint">Enter paper name or code</string>
    <string name="no_internet_txt">No Internet Connection</string>
    <string name="try_again_txt">Try Again</string>
    <string name="no_results_txt">There are no results for your Query, please refine it.</string>

</resources>